# textual-text-input-screen

./: README.md  pyproject.toml
src/textual_text_input_screen/: __init__.py  base_widgets.py  text_input_screen.py
